@@ -1,3 +1,9 @@
+=================
+Evince 49.alpha.0
+=================
+
+Placeholder for the release notes
+
 ===============
 Evince 48.alpha
 ===============
